# coco_to_yolo

./: LICENSE  README.md  pyproject.toml
coco_to_yolo/: __init__.py  coco_to__yolo.py
